# mesh-gen

./: README.md
algorithmic-generator/: .gitignore  Cargo.toml
algorithmic-generator/src/: main.rs
algorithmic-generator/viz/: main.py  test_graph.json
