[package]
name = "algorithmic-generator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
nalgebra-glm = {version = "0.15.0", features = ["serde-serialize"]}
rand = "0.8.4"